--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,14 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:usesCleartextTraffic="true"
-        android:icon="@drawable/logosinfondo"
+        android:icon="@drawable/sinfondo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/sinfondo"
         android:supportsRtl="true"
         tools:targetApi="31"
-        android:theme="@style/Theme.GameDex"
+        android:theme="@style/Theme.GameDex">
 
-        >
-
+        <!-- PRIMERA: SplashActivity (SIEMPRE inicia aquí) -->
         <activity
             android:name=".ui.activities.SplashActivity"
             android:exported="true"
@@ -32,21 +31,16 @@
             </intent-filter>
         </activity>
 
-        <!-- Actividad principal -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <!-- Actividad de autenticación -->
+        <!-- SEGUNDA: AuthActivity (después del splash, si no está logueado) -->
         <activity
             android:name=".ui.activities.AuthActivity"
             android:exported="false"
-            android:theme="@style/SplashTheme" />
+            android:theme="@style/SplashTheme"/>
+
+        <!-- TERCERA: MainActivity (después del login o si ya está logueado) -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
 
         <!-- Actividad de detalles del juego -->
         <activity
@@ -59,9 +53,6 @@
             android:exported="false"
             android:theme="@style/Theme.GameDex"
             android:parentActivityName=".MainActivity" />
-
-        <!-- También asegurarse de que GameDetailActivity esté declarada -->
-
 
     </application>
 
